[OneToOne] Added OneToOneTests and refactored different aspects of tests